# python-project-template

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  copier.yml  justfile  pyproject.toml
src/my_package/: main.py
tests/: test_main.py
