[project]
name = "my_package"
version = "0.1.0"
description = "Add your description here"
authors = [
    {name="Breno Costa", email="brenoccosta7@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
